--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,7 +92,7 @@ body {
 /* Type */
 body, input, select, textarea {
   color: #7f888f;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", "Microsoft YaHei", "Microsoft YaHei", sans-serif;
   font-size: 13pt;
   font-weight: 400;
   line-height: 1.65; }
@@ -132,7 +132,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   color: #3d4449;
-  font-family: "Roboto Slab", serif;
+  font-family: "Roboto Slab", "Microsoft YaHei", "Microsoft YaHei", serif;
   font-weight: 700;
   line-height: 1.5;
   margin: 0 0 1em 0; }
@@ -196,14 +196,14 @@ code {
   background: rgba(230, 235, 237, 0.25);
   border-radius: 0.375em;
   border: solid 1px rgba(210, 215, 217, 0.75);
-  font-family: "Courier New", monospace;
+  font-family: "Courier New", "Microsoft YaHei", monospace;
   font-size: 0.9em;
   margin: 0 0.25em;
   padding: 0.25em 0.65em; }
 
 pre {
   -webkit-overflow-scrolling: touch;
-  font-family: "Courier New", monospace;
+  font-family: "Courier New", "Microsoft YaHei", monospace;
   font-size: 0.9em;
   margin: 0 0 2em 0; }
   pre code {
@@ -990,7 +990,7 @@ section.special, article.special {
   text-align: center; }
 
 header p {
-  font-family: "Roboto Slab", serif;
+  font-family: "Roboto Slab", "Microsoft YaHei", serif;
   font-size: 1em;
   font-weight: 400;
   letter-spacing: 0.075em;
@@ -1120,7 +1120,7 @@ input[type="radio"] {
       text-rendering: auto;
       line-height: 1;
       text-transform: none !important;
-      font-family: 'Font Awesome 5 Free';
+      font-family: 'Font Awesome 5 Free', "Microsoft YaHei";
       font-weight: 900; }
     input[type="checkbox"] + label:before,
     input[type="radio"] + label:before {
@@ -1199,7 +1199,7 @@ input[type="radio"] + label:before {
     text-rendering: auto;
     line-height: 1;
     text-transform: none !important;
-    font-family: 'Font Awesome 5 Free';
+    font-family: 'Font Awesome 5 Free', "Microsoft YaHei";
     font-weight: 400; }
   .icon > .label {
     display: none; }
@@ -1208,7 +1208,7 @@ input[type="radio"] + label:before {
   .icon.solid:before {
     font-weight: 900; }
   .icon.brands:before {
-    font-family: 'Font Awesome 5 Brands'; }
+    font-family: 'Font Awesome 5 Brands', "Microsoft YaHei"; }
 
 /* Image */
 .image {
@@ -1373,7 +1373,7 @@ ul.contact {
       text-rendering: auto;
       line-height: 1;
       text-transform: none !important;
-      font-family: 'Font Awesome 5 Free';
+      font-family: 'Font Awesome 5 Free', "Microsoft YaHei";
       font-weight: 400; }
     ul.contact li:before {
       color: #f56a6a;
@@ -1499,7 +1499,7 @@ button,
   color: #f56a6a !important;
   cursor: pointer;
   display: inline-block;
-  font-family: "Roboto Slab", serif;
+  font-family: "Roboto Slab", "Microsoft YaHei", serif;
   font-size: 0.8em;
   font-weight: 700;
   height: 3.5em;
@@ -1892,7 +1892,7 @@ button,
     text-rendering: auto;
     line-height: 1;
     text-transform: none !important;
-    font-family: 'Font Awesome 5 Free';
+    font-family: 'Font Awesome 5 Free', "Microsoft YaHei";
     font-weight: 900; }
   #search form:before {
     -moz-transform: scaleX(-1);
@@ -1984,7 +1984,7 @@ button,
       text-rendering: auto;
       line-height: 1;
       text-transform: none !important;
-      font-family: 'Font Awesome 5 Free';
+      font-family: 'Font Awesome 5 Free', "Microsoft YaHei";
       font-weight: 900; }
     #sidebar .toggle:before {
       content: '\f0c9';
@@ -2087,7 +2087,7 @@ button,
   #header .logo {
     border-bottom: 0;
     color: inherit;
-    font-family: "Roboto Slab", serif;
+    font-family: "Roboto Slab", "Microsoft YaHei", serif;
     font-size: 1.125em; }
   #header .icons {
     text-align: right; }
@@ -2199,7 +2199,7 @@ button,
   -ms-user-select: none;
   user-select: none;
   color: #3d4449;
-  font-family: "Roboto Slab", serif;
+  font-family: "Roboto Slab", "Microsoft YaHei", "Microsoft YaHei", serif;
   font-weight: 400;
   letter-spacing: 0.075em;
   list-style: none;
@@ -2232,7 +2232,7 @@ button,
         text-rendering: auto;
         line-height: 1;
         text-transform: none !important;
-        font-family: 'Font Awesome 5 Free';
+        font-family: 'Font Awesome 5 Free',"Microsoft YaHei", "Microsoft YaHei";
         font-weight: 900; }
       #menu ul a.opener:before, #menu ul span.opener:before {
         -moz-transition: color 0.2s ease-in-out, -moz-transform 0.2s ease-in-out;
